# Markdown-to-PDF-converter

./: README.md
json-to-md-converter/: convert_json_to_md.py  figma-variables.json
md-to-pdf-converter/: .gitignore  README.md  USER_GUIDE.md  __init__.py  batch_from_dirs.py  batch_from_list.py  check_version.bat  convert.bat  install_and_test.py  install_dependencies.py  main.py  md_dirs.txt  pyproject.toml  requirements.txt  sample.md  setup.py  simple_converter.py  test_converter.py  test_weasyprint.bat
md-to-pdf-converter/cli/: __init__.py  main.py
md-to-pdf-converter/core/: __init__.py  converter.py  exceptions.py  html_processor.py  styling.py  utils.py
md-to-pdf-converter/docs/: batch-list-mode-plan.md
md-to-pdf-converter/examples/: README.md  academic.md  basic.md  code.md  formatting.md  tables.md  technical.md
